@@ -1,5 +1,10 @@
 [b]Version 0.6.3[/b]:
 
+(2008-08-17)
+ * Added a new (experimental) option: Video->Aspect ratio->None. When this 
+   option is selected the video will be stretched to fill all the available 
+   space, not keeping the aspect ratio.
+
 (2008-08-16)
  * Added m2ts to the list of extensions for video.
 
